{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 388,
  "lineage": "ed768d46-aee5-2aad-04a9-6872a53ff173",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da6a4a19ffff19e9",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0be9181f7e5326733",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be9181f7e5326733",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-os-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00cc156b6c40a3bb3",
            "private_dns": "ip-10-10-0-139.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.139",
            "public_ip": "3.108.190.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09691147310b1d9db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa74151eb6c461d3",
            "tags": {
              "Name": "WebApp-1"
            },
            "tags_all": {
              "Name": "WebApp-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0830ecbdfdba63da3",
              "sg-0e4cff1805ff53e4a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da6a4a19ffff19e9",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-02cf6f0cd0346d16c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cf6f0cd0346d16c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-os-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b66bba7a35dab527",
            "private_dns": "ip-10-10-1-38.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.38",
            "public_ip": "13.234.30.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0891020698a40adb7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053f1ee424f40c895",
            "tags": {
              "Name": "WebApp-2"
            },
            "tags_all": {
              "Name": "WebApp-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0830ecbdfdba63da3",
              "sg-0e4cff1805ff53e4a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-VPC-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:internet-gateway/igw-02fb660884dce4f2c",
            "id": "igw-02fb660884dce4f2c",
            "owner_id": "061685900439",
            "tags": {
              "Name": "webapp-VPC-IG"
            },
            "tags_all": {
              "Name": "webapp-VPC-IG"
            },
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-application-lb/6be74facc0e1a840",
            "arn_suffix": "app/webapp-application-lb/6be74facc0e1a840",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-application-lb-225294013.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-application-lb/6be74facc0e1a840",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0830ecbdfdba63da3",
              "sg-0e4cff1805ff53e4a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053f1ee424f40c895"
              },
              {
                "subnet_id": "subnet-0aa74151eb6c461d3"
              }
            ],
            "subnets": [
              "subnet-053f1ee424f40c895",
              "subnet-0aa74151eb6c461d3"
            ],
            "tags": {
              "Environment": "production",
              "Owner": "Amol"
            },
            "tags_all": {
              "Environment": "production",
              "Owner": "Amol"
            },
            "vpc_id": "vpc-0dd9bd266b18411f7",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-lb-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-lb-2/f78631602a8f2bd8",
            "arn_suffix": "app/webapp-lb-2/f78631602a8f2bd8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-lb-2-1771118800.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-lb-2/f78631602a8f2bd8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-lb-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0830ecbdfdba63da3",
              "sg-0e4cff1805ff53e4a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053f1ee424f40c895"
              },
              {
                "subnet_id": "subnet-0aa74151eb6c461d3"
              }
            ],
            "subnets": [
              "subnet-053f1ee424f40c895",
              "subnet-0aa74151eb6c461d3"
            ],
            "vpc_id": "vpc-0dd9bd266b18411f7",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_subnet.mysubnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/webapp-application-lb/6be74facc0e1a840/b6ff0afb9d459d20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/webapp-application-lb/6be74facc0e1a840/b6ff0afb9d459d20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-application-lb/6be74facc0e1a840",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-application-lb",
            "aws_lb_target_group.webapp-lb-target-group",
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-lb-listener-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/webapp-lb-2/f78631602a8f2bd8/2a782c0fe1225549",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/webapp-lb-target-grp-2/6944e4d8f88845cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/webapp-lb-2/f78631602a8f2bd8/2a782c0fe1225549",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/webapp-lb-2/f78631602a8f2bd8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-lb-2",
            "aws_lb_target_group.webapp-lb-target-grp-2",
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
            "arn_suffix": "targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Webapp-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-lb-target-grp-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/webapp-lb-target-grp-2/6944e4d8f88845cd",
            "arn_suffix": "targetgroup/webapp-lb-target-grp-2/6944e4d8f88845cd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/webapp-lb-target-grp-2/6944e4d8f88845cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapp-lb-target-grp-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp-lb-target-group-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221-20230113013705503600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
            "target_id": "i-0be9181f7e5326733"
          },
          "dependencies": [
            "aws_instance.webapp-1",
            "aws_lb_target_group.webapp-lb-target-group",
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp-lb-target-group-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221-20230113013705604400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Webapp-lb-target-group/9b920159f6f8b221",
            "target_id": "i-02cf6f0cd0346d16c"
          },
          "dependencies": [
            "aws_instance.webapp-2",
            "aws_lb_target_group.webapp-lb-target-group",
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-0c83d27580d9cc33c",
            "id": "rtb-0c83d27580d9cc33c",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fb660884dce4f2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-public-RT"
            },
            "tags_all": {
              "Name": "webapp-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-VPC-IG",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-public-RT-association-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0867019ec5fe0b",
            "route_table_id": "rtb-0c83d27580d9cc33c",
            "subnet_id": "subnet-0aa74151eb6c461d3"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-VPC-IG",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.mysubnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-public-RT-association-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e5e071243c84fb",
            "route_table_id": "rtb-0c83d27580d9cc33c",
            "subnet_id": "subnet-053f1ee424f40c895"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-VPC-IG",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.mysubnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:security-group/sg-0830ecbdfdba63da3",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0830ecbdfdba63da3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_port-22",
            "name_prefix": "",
            "owner_id": "061685900439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:security-group/sg-0e4cff1805ff53e4a",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e4cff1805ff53e4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port-80",
            "name_prefix": "",
            "owner_id": "061685900439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0aa74151eb6c461d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa74151eb6c461d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mysubnet-1a"
            },
            "tags_all": {
              "Name": "Mysubnet-1a"
            },
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-053f1ee424f40c895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f1ee424f40c895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mysubnet-1b"
            },
            "tags_all": {
              "Name": "Mysubnet-1b"
            },
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-04d63e9e7a0353090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d63e9e7a0353090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mysubnet-1c"
            },
            "tags_all": {
              "Name": "Mysubnet-1c"
            },
            "vpc_id": "vpc-0dd9bd266b18411f7"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:vpc/vpc-0dd9bd266b18411f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-096f117c7d5e31f04",
            "default_route_table_id": "rtb-0b10dd98aacd5803f",
            "default_security_group_id": "sg-06e1a446f58bcf09b",
            "dhcp_options_id": "dopt-04fb04627013b5d59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd9bd266b18411f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b10dd98aacd5803f",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Webapp-VPC"
            },
            "tags_all": {
              "Name": "Webapp-VPC"
            }
          }
        }
      ]
    }
  ]
}